// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shipping Form should render correctly 1`] = `
<Fragment>
  <Styled(CheckoutSectionTitleDisplay)
    title="lbl_shipping_header"
  />
  <[object Object] />
  <Styled(BodyCopy)
    className="elem-mb-XS elem-mt-MED hide-on-desktop hide-on-tablet"
    color="text.primary"
    component="p"
    data-locator="shipping-details"
    fontFamily="primary"
    fontSize="fs28"
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  >
    lbl_shipping_sectionHeader
  </Styled(BodyCopy)>
  <form
    className=""
    isEditing={false}
    name="checkoutShipping"
    onSubmit={[Function]}
  >
    <Styled(RegisteredShippingForm)
      ServerErrors={Object {}}
      addressLabels={
        Object {
          "addressFormLabels": Object {},
        }
      }
      addressPhoneNo={null}
      className=""
      defaultAddressId={null}
      defaultShipmentId={null}
      editShipmentDetailsError=""
      errorMessageRef={
        Object {
          "current": null,
        }
      }
      isAddNewAddress={false}
      isEditing={false}
      isGuest={false}
      isMobile={false}
      isOrderUpdateChecked={false}
      isSaveToAddressBookChecked={false}
      isUsSite={true}
      newUserPhoneNo={null}
      onFileAddressKey={null}
      orderHasPickUp={false}
      saveToAddressBook={false}
      selectedShipmentId={null}
      setAsDefaultShipping={false}
      shipmentMethods={null}
      shippingAddressId={null}
      shippingLabels={Object {}}
      showAccordian={true}
      smsSignUpLabels={Object {}}
      syncErrors={Object {}}
      toggleIsEditing={[Function]}
      userAddresses={Array []}
    />
    <FormSection
      name="smsSignUp"
    >
      <Styled(SMSFormFields)
        addressPhoneNo={null}
        borderBottom={true}
        formName="checkoutShipping"
        formSection="smsSignUp"
        isOrderUpdateChecked={false}
        labels={Object {}}
        showDefaultCheckbox={false}
        variation="secondary"
      />
    </FormSection>
    <Styled(Row)
      fullBleed={true}
    >
      <Styled(Col)
        colSize={
          Object {
            "large": 6,
            "medium": 8,
            "small": 6,
          }
        }
      >
        <FormSection
          name="shipmentMethods"
        >
          <div
            className="shipment-methods-form"
          >
            <Styled(ShipmentMethods)
              formName="checkoutShipping"
              formSection="shipmentMethods"
              selectedShipmentId={null}
              shipmentHeader="lbl_shipping_shipmentHeader"
              shipmentMethods={null}
            />
          </div>
        </FormSection>
      </Styled(Col)>
      <Styled(Col)
        colSize={
          Object {
            "large": 6,
            "medium": 8,
            "small": 6,
          }
        }
      >
        <Connect(GiftServicesContainer)
          formName="checkoutShipping"
          formSection="giftServices"
          showDefaultCheckbox={false}
          variation="secondary"
        />
      </Styled(Col)>
    </Styled(Row)>
    <Styled(CheckoutOrderInfo)
      isGuest={false}
      showAccordian={true}
    />
    <Styled(CheckoutFooter)
      backLinkText="lbl_shipping_backLinkText"
      hideBackLink={false}
      nextButtonText="lbl_shipping_billingText"
    />
  </form>
</Fragment>
`;

exports[`Shipping Form should render correctly with logged in user 1`] = `
<Fragment>
  <Styled(CheckoutSectionTitleDisplay)
    title="lbl_shipping_header"
  />
  <Styled(BodyCopy)
    className="elem-mb-XS elem-mt-MED hide-on-desktop hide-on-tablet"
    color="text.primary"
    component="p"
    data-locator="shipping-details"
    fontFamily="primary"
    fontSize="fs28"
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  >
    lbl_shipping_sectionHeader
  </Styled(BodyCopy)>
  <form
    className=""
    isEditing={false}
    name="checkoutShipping"
    onSubmit={[Function]}
  >
    <div
      className="address-form"
    >
      <FormSection
        name="address"
      >
        <Styled(AddressFields)
          addressFormLabels={Object {}}
          addressPhoneNo={null}
          formName="checkoutShipping"
          formSection="address"
          showDefaultCheckbox={false}
          variation="secondary"
        />
      </FormSection>
    </div>
    <FormSection
      name="emailSignUp"
    >
      <div
        className="email-signup-container"
      >
        <Field
          className="email-signup"
          component={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-gZMcBi",
                "isStatic": false,
                "rules": Array [
                  "
  ",
                  "
  display: block;
  align-items: ",
                  [Function],
                  ";

  & .CheckBox__input {
    flex: 0 0 auto;
    position: relative;
    top: 0;
    appearance: none;
    outline: 0;
    border: 0;
    height: ",
                  "25px",
                  ";
    width: ",
                  "25px",
                  ";
    margin: 0;
    margin-right: ",
                  [Function],
                  ";
    display: inline-block;
    vertical-align: top;
  }

  & .CheckBox__input:before {
    content: '';
    position: absolute;
    height: 100%;
    width: 100%;
    left: 0;
    border: 1px solid ",
                  [Function],
                  ";
  }

  & .CheckBox__input:checked:before {
    background: ",
                  [Function],
                  ";
    border: 1px solid ",
                  [Function],
                  ";
  }

  & .CheckBox__input:checked:after {
    transform: rotate(225deg);
    content: '';
    border: 2px solid ",
                  [Function],
                  ";
    font-size: ",
                  [Function],
                  "px;
    width: ",
                  [Function],
                  ";
    height: 10px;
    border-right: 0;
    border-bottom: 0;
    left: 10px;
    top: 5px;
    position: absolute;
  }

  & .CheckBox__text {
    width: calc(100% - 45px);
    display: inline-block;
  }

  & .CheckBox__text a {
    color: ",
                  [Function],
                  ";
  }

  & .disabled {
    opacity: ",
                  [Function],
                  ";
  }

  & .Checkbox__error {
    display: flex;
    flex-direction: row;
    padding-left: ",
                  [Function],
                  ";
  }
  & .warning-icon {
    background: transparent url('/static/images/circle-alert-fill.svg') no-repeat 0 0;
    background-size: contain;
    border: none;
    height: ",
                  [Function],
                  ";
    width: ",
                  [Function],
                  ";
    margin-right: 4px;
    margin-top: 2px;
  }
  & #checkbox__error__iAgree {
    margin-top: 4px;
  }
",
                  ";
",
                ],
              },
              "displayName": "Styled(InputCheckbox)",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-gZMcBi",
              "target": [Function],
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          dataLocator="signUp-checkbox-field"
          name="sendEmailSignup"
        >
          <Styled(BodyCopy)
            className={null}
            color="text.primary"
            component="p"
            dataLocator="pickup-email-signUp-heading-lbl"
            fontFamily="secondary"
            fontSize="fs16"
            fontWeight="regular"
            letterSpacing="normal"
            lineHeight="normal"
            link={null}
            textAlign="left"
          >
            lbl_pickup_emailSignupHeading
          </Styled(BodyCopy)>
        </Field>
        <div
          className="email-signup-text"
        >
          <Styled(BodyCopy)
            className={null}
            color="text.primary"
            component="p"
            dataLocator="pickup-email-signUp-sub-heading-text"
            fontFamily="secondary"
            fontSize="fs12"
            fontWeight="regular"
            letterSpacing="normal"
            lineHeight="normal"
            link={null}
            textAlign="left"
          >
            lbl_pickup_emailSignupSubHeading
          </Styled(BodyCopy)>
          <Styled(BodyCopy)
            className={null}
            color="text.primary"
            component="p"
            fontFamily="secondary"
            fontSize="fs12"
            fontWeight="regular"
            letterSpacing="normal"
            lineHeight="normal"
            link={null}
            textAlign="left"
          >
            lbl_pickup_emailSignupSubSubHeading
          </Styled(BodyCopy)>
          <Styled(Anchor)
            anchorVariation="primary"
            dataLocator="shipping-email-signUp-contact-anchor"
            fontSizeVariation="small"
            href="#"
            noLink={true}
            noUnderline={true}
            target="_blank"
          >
            lbl_pickup_emailSignupContact
          </Styled(Anchor)>
        </div>
      </div>
    </FormSection>
    <Styled(Row)
      fullBleed={true}
    >
      <Styled(Col)
        colSize={
          Object {
            "large": 6,
            "medium": 8,
            "small": 6,
          }
        }
      >
        <FormSection
          name="shipmentMethods"
        >
          <div
            className="shipment-methods-form"
          >
            <Styled(ShipmentMethods)
              formName="checkoutShipping"
              formSection="shipmentMethods"
              selectedShipmentId={null}
              shipmentHeader="lbl_shipping_shipmentHeader"
              shipmentMethods={null}
            />
          </div>
        </FormSection>
      </Styled(Col)>
      <Styled(Col)
        colSize={
          Object {
            "large": 6,
            "medium": 8,
            "small": 6,
          }
        }
      >
        <Connect(GiftServicesContainer)
          formName="checkoutShipping"
          formSection="giftServices"
          showDefaultCheckbox={false}
          variation="secondary"
        />
      </Styled(Col)>
    </Styled(Row)>
    <Styled(CheckoutOrderInfo)
      isGuest={true}
      showAccordian={true}
    />
    <Styled(CheckoutFooter)
      backLinkText="lbl_shipping_backLinkText"
      hideBackLink={false}
      nextButtonText="lbl_shipping_billingText"
    />
  </form>
</Fragment>
`;

exports[`Shipping Form should render correctly with logged in user having addresses 1`] = `
<Fragment>
  <Styled(CheckoutSectionTitleDisplay)
    title="lbl_shipping_header"
  />
  <Styled(BodyCopy)
    className="elem-mb-XS elem-mt-MED hide-on-desktop hide-on-tablet"
    color="text.primary"
    component="p"
    data-locator="shipping-details"
    fontFamily="primary"
    fontSize="fs28"
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  >
    lbl_shipping_sectionHeader
  </Styled(BodyCopy)>
  <form
    className=""
    isEditing={false}
    name="checkoutShipping"
    onSubmit={[Function]}
  >
    <div
      className="address-form"
    >
      <FormSection
        name="address"
      >
        <Styled(AddressFields)
          addressFormLabels={Object {}}
          addressPhoneNo={null}
          dispatch={
            [MockFunction] {
              "calls": Array [
                Array [
                  Object {
                    "meta": Object {
                      "field": "shipmentMethods.shippingMethodId",
                      "form": "checkoutShipping",
                      "persistentSubmitErrors": undefined,
                      "touch": undefined,
                    },
                    "payload": "90113",
                    "type": "@@redux-form/CHANGE",
                  },
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            }
          }
          formName="checkoutShipping"
          formSection="address"
          showDefaultCheckbox={false}
          variation="secondary"
        />
      </FormSection>
    </div>
    <FormSection
      name="emailSignUp"
    >
      <div
        className="email-signup-container"
      >
        <Field
          className="email-signup"
          component={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-gZMcBi",
                "isStatic": false,
                "rules": Array [
                  "
  ",
                  "
  display: block;
  align-items: ",
                  [Function],
                  ";

  & .CheckBox__input {
    flex: 0 0 auto;
    position: relative;
    top: 0;
    appearance: none;
    outline: 0;
    border: 0;
    height: ",
                  "25px",
                  ";
    width: ",
                  "25px",
                  ";
    margin: 0;
    margin-right: ",
                  [Function],
                  ";
    display: inline-block;
    vertical-align: top;
  }

  & .CheckBox__input:before {
    content: '';
    position: absolute;
    height: 100%;
    width: 100%;
    left: 0;
    border: 1px solid ",
                  [Function],
                  ";
  }

  & .CheckBox__input:checked:before {
    background: ",
                  [Function],
                  ";
    border: 1px solid ",
                  [Function],
                  ";
  }

  & .CheckBox__input:checked:after {
    transform: rotate(225deg);
    content: '';
    border: 2px solid ",
                  [Function],
                  ";
    font-size: ",
                  [Function],
                  "px;
    width: ",
                  [Function],
                  ";
    height: 10px;
    border-right: 0;
    border-bottom: 0;
    left: 10px;
    top: 5px;
    position: absolute;
  }

  & .CheckBox__text {
    width: calc(100% - 45px);
    display: inline-block;
  }

  & .CheckBox__text a {
    color: ",
                  [Function],
                  ";
  }

  & .disabled {
    opacity: ",
                  [Function],
                  ";
  }

  & .Checkbox__error {
    display: flex;
    flex-direction: row;
    padding-left: ",
                  [Function],
                  ";
  }
  & .warning-icon {
    background: transparent url('/static/images/circle-alert-fill.svg') no-repeat 0 0;
    background-size: contain;
    border: none;
    height: ",
                  [Function],
                  ";
    width: ",
                  [Function],
                  ";
    margin-right: 4px;
    margin-top: 2px;
  }
  & #checkbox__error__iAgree {
    margin-top: 4px;
  }
",
                  ";
",
                ],
              },
              "displayName": "Styled(InputCheckbox)",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-gZMcBi",
              "target": [Function],
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          dataLocator="signUp-checkbox-field"
          name="sendEmailSignup"
        >
          <Styled(BodyCopy)
            className={null}
            color="text.primary"
            component="p"
            dataLocator="pickup-email-signUp-heading-lbl"
            fontFamily="secondary"
            fontSize="fs16"
            fontWeight="regular"
            letterSpacing="normal"
            lineHeight="normal"
            link={null}
            textAlign="left"
          >
            lbl_pickup_emailSignupHeading
          </Styled(BodyCopy)>
        </Field>
        <div
          className="email-signup-text"
        >
          <Styled(BodyCopy)
            className={null}
            color="text.primary"
            component="p"
            dataLocator="pickup-email-signUp-sub-heading-text"
            fontFamily="secondary"
            fontSize="fs12"
            fontWeight="regular"
            letterSpacing="normal"
            lineHeight="normal"
            link={null}
            textAlign="left"
          >
            lbl_pickup_emailSignupSubHeading
          </Styled(BodyCopy)>
          <Styled(BodyCopy)
            className={null}
            color="text.primary"
            component="p"
            fontFamily="secondary"
            fontSize="fs12"
            fontWeight="regular"
            letterSpacing="normal"
            lineHeight="normal"
            link={null}
            textAlign="left"
          >
            lbl_pickup_emailSignupSubSubHeading
          </Styled(BodyCopy)>
          <Styled(Anchor)
            anchorVariation="primary"
            dataLocator="shipping-email-signUp-contact-anchor"
            fontSizeVariation="small"
            href="#"
            noLink={true}
            noUnderline={true}
            target="_blank"
          >
            lbl_pickup_emailSignupContact
          </Styled(Anchor)>
        </div>
      </div>
    </FormSection>
    <Styled(Row)
      fullBleed={true}
    >
      <Styled(Col)
        colSize={
          Object {
            "large": 6,
            "medium": 8,
            "small": 6,
          }
        }
      >
        <FormSection
          name="shipmentMethods"
        >
          <div
            className="shipment-methods-form"
          >
            <Styled(ShipmentMethods)
              formName="checkoutShipping"
              formSection="shipmentMethods"
              selectedShipmentId={null}
              shipmentHeader="lbl_shipping_shipmentHeader"
              shipmentMethods={
                Array [
                  Object {
                    "id": 123,
                  },
                ]
              }
            />
          </div>
        </FormSection>
      </Styled(Col)>
      <Styled(Col)
        colSize={
          Object {
            "large": 6,
            "medium": 8,
            "small": 6,
          }
        }
      >
        <Connect(GiftServicesContainer)
          dispatch={
            [MockFunction] {
              "calls": Array [
                Array [
                  Object {
                    "meta": Object {
                      "field": "shipmentMethods.shippingMethodId",
                      "form": "checkoutShipping",
                      "persistentSubmitErrors": undefined,
                      "touch": undefined,
                    },
                    "payload": "90113",
                    "type": "@@redux-form/CHANGE",
                  },
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            }
          }
          formName="checkoutShipping"
          formSection="giftServices"
          showDefaultCheckbox={false}
          variation="secondary"
        />
      </Styled(Col)>
    </Styled(Row)>
    <Styled(CheckoutOrderInfo)
      isGuest={true}
      showAccordian={true}
    />
    <Styled(CheckoutFooter)
      backLinkText="lbl_shipping_backLinkText"
      hideBackLink={false}
      nextButtonText="lbl_shipping_billingText"
    />
  </form>
</Fragment>
`;

exports[`Shipping Form should render correctly with logged in user having addresses with isAddressModalEmptied false 1`] = `
<Fragment>
  <Styled(CheckoutSectionTitleDisplay)
    title="lbl_shipping_header"
  />
  <Styled(BodyCopy)
    className="elem-mb-XS elem-mt-MED hide-on-desktop hide-on-tablet"
    color="text.primary"
    component="p"
    data-locator="shipping-details"
    fontFamily="primary"
    fontSize="fs28"
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  >
    lbl_shipping_sectionHeader
  </Styled(BodyCopy)>
  <form
    className=""
    isEditing={true}
    name="checkoutShipping"
    onSubmit={[Function]}
  >
    <div
      className="address-form"
    >
      <FormSection
        name="address"
      >
        <Styled(AddressFields)
          addressFormLabels={Object {}}
          addressPhoneNo={null}
          dispatch={
            [MockFunction] {
              "calls": Array [
                Array [
                  Object {
                    "meta": Object {
                      "field": "shipmentMethods.shippingMethodId",
                      "form": "checkoutShipping",
                      "persistentSubmitErrors": undefined,
                      "touch": undefined,
                    },
                    "payload": "90113",
                    "type": "@@redux-form/CHANGE",
                  },
                ],
                Array [
                  Object {
                    "meta": Object {
                      "field": "address.addressLine1",
                      "form": "checkoutShipping",
                      "persistentSubmitErrors": undefined,
                      "touch": undefined,
                    },
                    "payload": "addressline 1 hhh",
                    "type": "@@redux-form/CHANGE",
                  },
                ],
                Array [
                  Object {
                    "meta": Object {
                      "field": "address.addressLine2",
                      "form": "checkoutShipping",
                      "persistentSubmitErrors": undefined,
                      "touch": undefined,
                    },
                    "payload": "addressline 2 mmm",
                    "type": "@@redux-form/CHANGE",
                  },
                ],
                Array [
                  Object {
                    "meta": Object {
                      "field": "address.firstName",
                      "form": "checkoutShipping",
                      "persistentSubmitErrors": undefined,
                      "touch": undefined,
                    },
                    "payload": "test",
                    "type": "@@redux-form/CHANGE",
                  },
                ],
                Array [
                  Object {
                    "meta": Object {
                      "field": "address.lastName",
                      "form": "checkoutShipping",
                      "persistentSubmitErrors": undefined,
                      "touch": undefined,
                    },
                    "payload": "test",
                    "type": "@@redux-form/CHANGE",
                  },
                ],
                Array [
                  Object {
                    "meta": Object {
                      "field": "address.city",
                      "form": "checkoutShipping",
                      "persistentSubmitErrors": undefined,
                      "touch": undefined,
                    },
                    "payload": "test city",
                    "type": "@@redux-form/CHANGE",
                  },
                ],
                Array [
                  Object {
                    "meta": Object {
                      "field": "address.zipCode",
                      "form": "checkoutShipping",
                      "persistentSubmitErrors": undefined,
                      "touch": undefined,
                    },
                    "payload": undefined,
                    "type": "@@redux-form/CHANGE",
                  },
                ],
                Array [
                  Object {
                    "meta": Object {
                      "field": "address.state",
                      "form": "checkoutShipping",
                      "persistentSubmitErrors": undefined,
                      "touch": undefined,
                    },
                    "payload": undefined,
                    "type": "@@redux-form/CHANGE",
                  },
                ],
                Array [
                  Object {
                    "meta": Object {
                      "field": "address.phoneNumber",
                      "form": "checkoutShipping",
                      "persistentSubmitErrors": undefined,
                      "touch": undefined,
                    },
                    "payload": "1234567890",
                    "type": "@@redux-form/CHANGE",
                  },
                ],
                Array [
                  Object {
                    "meta": Object {
                      "field": "defaultShipping",
                      "form": "checkoutShipping",
                      "persistentSubmitErrors": undefined,
                      "touch": undefined,
                    },
                    "payload": true,
                    "type": "@@redux-form/CHANGE",
                  },
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
                Object {
                  "type": "return",
                  "value": undefined,
                },
                Object {
                  "type": "return",
                  "value": undefined,
                },
                Object {
                  "type": "return",
                  "value": undefined,
                },
                Object {
                  "type": "return",
                  "value": undefined,
                },
                Object {
                  "type": "return",
                  "value": undefined,
                },
                Object {
                  "type": "return",
                  "value": undefined,
                },
                Object {
                  "type": "return",
                  "value": undefined,
                },
                Object {
                  "type": "return",
                  "value": undefined,
                },
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            }
          }
          formName="checkoutShipping"
          formSection="address"
          showDefaultCheckbox={false}
          variation="secondary"
        />
      </FormSection>
    </div>
    <FormSection
      name="emailSignUp"
    >
      <div
        className="email-signup-container"
      >
        <Field
          className="email-signup"
          component={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-gZMcBi",
                "isStatic": false,
                "rules": Array [
                  "
  ",
                  "
  display: block;
  align-items: ",
                  [Function],
                  ";

  & .CheckBox__input {
    flex: 0 0 auto;
    position: relative;
    top: 0;
    appearance: none;
    outline: 0;
    border: 0;
    height: ",
                  "25px",
                  ";
    width: ",
                  "25px",
                  ";
    margin: 0;
    margin-right: ",
                  [Function],
                  ";
    display: inline-block;
    vertical-align: top;
  }

  & .CheckBox__input:before {
    content: '';
    position: absolute;
    height: 100%;
    width: 100%;
    left: 0;
    border: 1px solid ",
                  [Function],
                  ";
  }

  & .CheckBox__input:checked:before {
    background: ",
                  [Function],
                  ";
    border: 1px solid ",
                  [Function],
                  ";
  }

  & .CheckBox__input:checked:after {
    transform: rotate(225deg);
    content: '';
    border: 2px solid ",
                  [Function],
                  ";
    font-size: ",
                  [Function],
                  "px;
    width: ",
                  [Function],
                  ";
    height: 10px;
    border-right: 0;
    border-bottom: 0;
    left: 10px;
    top: 5px;
    position: absolute;
  }

  & .CheckBox__text {
    width: calc(100% - 45px);
    display: inline-block;
  }

  & .CheckBox__text a {
    color: ",
                  [Function],
                  ";
  }

  & .disabled {
    opacity: ",
                  [Function],
                  ";
  }

  & .Checkbox__error {
    display: flex;
    flex-direction: row;
    padding-left: ",
                  [Function],
                  ";
  }
  & .warning-icon {
    background: transparent url('/static/images/circle-alert-fill.svg') no-repeat 0 0;
    background-size: contain;
    border: none;
    height: ",
                  [Function],
                  ";
    width: ",
                  [Function],
                  ";
    margin-right: 4px;
    margin-top: 2px;
  }
  & #checkbox__error__iAgree {
    margin-top: 4px;
  }
",
                  ";
",
                ],
              },
              "displayName": "Styled(InputCheckbox)",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-gZMcBi",
              "target": [Function],
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          dataLocator="signUp-checkbox-field"
          name="sendEmailSignup"
        >
          <Styled(BodyCopy)
            className={null}
            color="text.primary"
            component="p"
            dataLocator="pickup-email-signUp-heading-lbl"
            fontFamily="secondary"
            fontSize="fs16"
            fontWeight="regular"
            letterSpacing="normal"
            lineHeight="normal"
            link={null}
            textAlign="left"
          >
            lbl_pickup_emailSignupHeading
          </Styled(BodyCopy)>
        </Field>
        <div
          className="email-signup-text"
        >
          <Styled(BodyCopy)
            className={null}
            color="text.primary"
            component="p"
            dataLocator="pickup-email-signUp-sub-heading-text"
            fontFamily="secondary"
            fontSize="fs12"
            fontWeight="regular"
            letterSpacing="normal"
            lineHeight="normal"
            link={null}
            textAlign="left"
          >
            lbl_pickup_emailSignupSubHeading
          </Styled(BodyCopy)>
          <Styled(BodyCopy)
            className={null}
            color="text.primary"
            component="p"
            fontFamily="secondary"
            fontSize="fs12"
            fontWeight="regular"
            letterSpacing="normal"
            lineHeight="normal"
            link={null}
            textAlign="left"
          >
            lbl_pickup_emailSignupSubSubHeading
          </Styled(BodyCopy)>
          <Styled(Anchor)
            anchorVariation="primary"
            dataLocator="shipping-email-signUp-contact-anchor"
            fontSizeVariation="small"
            href="#"
            noLink={true}
            noUnderline={true}
            target="_blank"
          >
            lbl_pickup_emailSignupContact
          </Styled(Anchor)>
        </div>
      </div>
    </FormSection>
    <Styled(Row)
      fullBleed={true}
    >
      <Styled(Col)
        colSize={
          Object {
            "large": 6,
            "medium": 8,
            "small": 6,
          }
        }
      >
        <FormSection
          name="shipmentMethods"
        >
          <div
            className="shipment-methods-form"
          >
            <Styled(ShipmentMethods)
              formName="checkoutShipping"
              formSection="shipmentMethods"
              selectedShipmentId={null}
              shipmentHeader="lbl_shipping_shipmentHeader"
              shipmentMethods={
                Array [
                  Object {
                    "id": 123,
                  },
                ]
              }
            />
          </div>
        </FormSection>
      </Styled(Col)>
      <Styled(Col)
        colSize={
          Object {
            "large": 6,
            "medium": 8,
            "small": 6,
          }
        }
      >
        <Connect(GiftServicesContainer)
          dispatch={
            [MockFunction] {
              "calls": Array [
                Array [
                  Object {
                    "meta": Object {
                      "field": "shipmentMethods.shippingMethodId",
                      "form": "checkoutShipping",
                      "persistentSubmitErrors": undefined,
                      "touch": undefined,
                    },
                    "payload": "90113",
                    "type": "@@redux-form/CHANGE",
                  },
                ],
                Array [
                  Object {
                    "meta": Object {
                      "field": "address.addressLine1",
                      "form": "checkoutShipping",
                      "persistentSubmitErrors": undefined,
                      "touch": undefined,
                    },
                    "payload": "addressline 1 hhh",
                    "type": "@@redux-form/CHANGE",
                  },
                ],
                Array [
                  Object {
                    "meta": Object {
                      "field": "address.addressLine2",
                      "form": "checkoutShipping",
                      "persistentSubmitErrors": undefined,
                      "touch": undefined,
                    },
                    "payload": "addressline 2 mmm",
                    "type": "@@redux-form/CHANGE",
                  },
                ],
                Array [
                  Object {
                    "meta": Object {
                      "field": "address.firstName",
                      "form": "checkoutShipping",
                      "persistentSubmitErrors": undefined,
                      "touch": undefined,
                    },
                    "payload": "test",
                    "type": "@@redux-form/CHANGE",
                  },
                ],
                Array [
                  Object {
                    "meta": Object {
                      "field": "address.lastName",
                      "form": "checkoutShipping",
                      "persistentSubmitErrors": undefined,
                      "touch": undefined,
                    },
                    "payload": "test",
                    "type": "@@redux-form/CHANGE",
                  },
                ],
                Array [
                  Object {
                    "meta": Object {
                      "field": "address.city",
                      "form": "checkoutShipping",
                      "persistentSubmitErrors": undefined,
                      "touch": undefined,
                    },
                    "payload": "test city",
                    "type": "@@redux-form/CHANGE",
                  },
                ],
                Array [
                  Object {
                    "meta": Object {
                      "field": "address.zipCode",
                      "form": "checkoutShipping",
                      "persistentSubmitErrors": undefined,
                      "touch": undefined,
                    },
                    "payload": undefined,
                    "type": "@@redux-form/CHANGE",
                  },
                ],
                Array [
                  Object {
                    "meta": Object {
                      "field": "address.state",
                      "form": "checkoutShipping",
                      "persistentSubmitErrors": undefined,
                      "touch": undefined,
                    },
                    "payload": undefined,
                    "type": "@@redux-form/CHANGE",
                  },
                ],
                Array [
                  Object {
                    "meta": Object {
                      "field": "address.phoneNumber",
                      "form": "checkoutShipping",
                      "persistentSubmitErrors": undefined,
                      "touch": undefined,
                    },
                    "payload": "1234567890",
                    "type": "@@redux-form/CHANGE",
                  },
                ],
                Array [
                  Object {
                    "meta": Object {
                      "field": "defaultShipping",
                      "form": "checkoutShipping",
                      "persistentSubmitErrors": undefined,
                      "touch": undefined,
                    },
                    "payload": true,
                    "type": "@@redux-form/CHANGE",
                  },
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
                Object {
                  "type": "return",
                  "value": undefined,
                },
                Object {
                  "type": "return",
                  "value": undefined,
                },
                Object {
                  "type": "return",
                  "value": undefined,
                },
                Object {
                  "type": "return",
                  "value": undefined,
                },
                Object {
                  "type": "return",
                  "value": undefined,
                },
                Object {
                  "type": "return",
                  "value": undefined,
                },
                Object {
                  "type": "return",
                  "value": undefined,
                },
                Object {
                  "type": "return",
                  "value": undefined,
                },
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            }
          }
          formName="checkoutShipping"
          formSection="giftServices"
          showDefaultCheckbox={false}
          variation="secondary"
        />
      </Styled(Col)>
    </Styled(Row)>
    <Styled(CheckoutOrderInfo)
      isGuest={true}
      showAccordian={true}
    />
    <Styled(CheckoutFooter)
      backLinkText="lbl_shipping_backLinkText"
      hideBackLink={false}
      nextButtonText="lbl_shipping_billingText"
    />
  </form>
</Fragment>
`;

exports[`Shipping Form should render correctly with logged in user having addresses with modalType add and state true 1`] = `
<Fragment>
  <Styled(CheckoutSectionTitleDisplay)
    title="lbl_shipping_header"
  />
  <Styled(BodyCopy)
    className="elem-mb-XS elem-mt-MED hide-on-desktop hide-on-tablet"
    color="text.primary"
    component="p"
    data-locator="shipping-details"
    fontFamily="primary"
    fontSize="fs28"
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  >
    lbl_shipping_sectionHeader
  </Styled(BodyCopy)>
  <form
    className=""
    isEditing={false}
    name="checkoutShipping"
    onSubmit={[Function]}
  >
    <div
      className="address-form"
    >
      <FormSection
        name="address"
      >
        <Styled(AddressFields)
          addressFormLabels={Object {}}
          addressPhoneNo={null}
          dispatch={[MockFunction]}
          formName="checkoutShipping"
          formSection="address"
          showDefaultCheckbox={false}
          variation="secondary"
        />
      </FormSection>
    </div>
    <FormSection
      name="emailSignUp"
    >
      <div
        className="email-signup-container"
      >
        <Field
          className="email-signup"
          component={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-gZMcBi",
                "isStatic": false,
                "rules": Array [
                  "
  ",
                  "
  display: block;
  align-items: ",
                  [Function],
                  ";

  & .CheckBox__input {
    flex: 0 0 auto;
    position: relative;
    top: 0;
    appearance: none;
    outline: 0;
    border: 0;
    height: ",
                  "25px",
                  ";
    width: ",
                  "25px",
                  ";
    margin: 0;
    margin-right: ",
                  [Function],
                  ";
    display: inline-block;
    vertical-align: top;
  }

  & .CheckBox__input:before {
    content: '';
    position: absolute;
    height: 100%;
    width: 100%;
    left: 0;
    border: 1px solid ",
                  [Function],
                  ";
  }

  & .CheckBox__input:checked:before {
    background: ",
                  [Function],
                  ";
    border: 1px solid ",
                  [Function],
                  ";
  }

  & .CheckBox__input:checked:after {
    transform: rotate(225deg);
    content: '';
    border: 2px solid ",
                  [Function],
                  ";
    font-size: ",
                  [Function],
                  "px;
    width: ",
                  [Function],
                  ";
    height: 10px;
    border-right: 0;
    border-bottom: 0;
    left: 10px;
    top: 5px;
    position: absolute;
  }

  & .CheckBox__text {
    width: calc(100% - 45px);
    display: inline-block;
  }

  & .CheckBox__text a {
    color: ",
                  [Function],
                  ";
  }

  & .disabled {
    opacity: ",
                  [Function],
                  ";
  }

  & .Checkbox__error {
    display: flex;
    flex-direction: row;
    padding-left: ",
                  [Function],
                  ";
  }
  & .warning-icon {
    background: transparent url('/static/images/circle-alert-fill.svg') no-repeat 0 0;
    background-size: contain;
    border: none;
    height: ",
                  [Function],
                  ";
    width: ",
                  [Function],
                  ";
    margin-right: 4px;
    margin-top: 2px;
  }
  & #checkbox__error__iAgree {
    margin-top: 4px;
  }
",
                  ";
",
                ],
              },
              "displayName": "Styled(InputCheckbox)",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-gZMcBi",
              "target": [Function],
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          dataLocator="signUp-checkbox-field"
          name="sendEmailSignup"
        >
          <Styled(BodyCopy)
            className={null}
            color="text.primary"
            component="p"
            dataLocator="pickup-email-signUp-heading-lbl"
            fontFamily="secondary"
            fontSize="fs16"
            fontWeight="regular"
            letterSpacing="normal"
            lineHeight="normal"
            link={null}
            textAlign="left"
          >
            lbl_pickup_emailSignupHeading
          </Styled(BodyCopy)>
        </Field>
        <div
          className="email-signup-text"
        >
          <Styled(BodyCopy)
            className={null}
            color="text.primary"
            component="p"
            dataLocator="pickup-email-signUp-sub-heading-text"
            fontFamily="secondary"
            fontSize="fs12"
            fontWeight="regular"
            letterSpacing="normal"
            lineHeight="normal"
            link={null}
            textAlign="left"
          >
            lbl_pickup_emailSignupSubHeading
          </Styled(BodyCopy)>
          <Styled(BodyCopy)
            className={null}
            color="text.primary"
            component="p"
            fontFamily="secondary"
            fontSize="fs12"
            fontWeight="regular"
            letterSpacing="normal"
            lineHeight="normal"
            link={null}
            textAlign="left"
          >
            lbl_pickup_emailSignupSubSubHeading
          </Styled(BodyCopy)>
          <Styled(Anchor)
            anchorVariation="primary"
            dataLocator="shipping-email-signUp-contact-anchor"
            fontSizeVariation="small"
            href="#"
            noLink={true}
            noUnderline={true}
            target="_blank"
          >
            lbl_pickup_emailSignupContact
          </Styled(Anchor)>
        </div>
      </div>
    </FormSection>
    <Styled(Row)
      fullBleed={true}
    >
      <Styled(Col)
        colSize={
          Object {
            "large": 6,
            "medium": 8,
            "small": 6,
          }
        }
      >
        <FormSection
          name="shipmentMethods"
        >
          <div
            className="shipment-methods-form"
          >
            <Styled(ShipmentMethods)
              formName="checkoutShipping"
              formSection="shipmentMethods"
              selectedShipmentId={null}
              shipmentHeader="lbl_shipping_shipmentHeader"
              shipmentMethods={
                Array [
                  Object {},
                ]
              }
            />
          </div>
        </FormSection>
      </Styled(Col)>
      <Styled(Col)
        colSize={
          Object {
            "large": 6,
            "medium": 8,
            "small": 6,
          }
        }
      >
        <Connect(GiftServicesContainer)
          dispatch={[MockFunction]}
          formName="checkoutShipping"
          formSection="giftServices"
          showDefaultCheckbox={false}
          variation="secondary"
        />
      </Styled(Col)>
    </Styled(Row)>
    <Styled(CheckoutOrderInfo)
      isGuest={true}
      showAccordian={true}
    />
    <Styled(CheckoutFooter)
      backLinkText="lbl_shipping_backLinkText"
      hideBackLink={false}
      nextButtonText="lbl_shipping_billingText"
    />
  </form>
</Fragment>
`;
